# grpc-prometheus-metrics

./: .pre-commit-config.yaml  .travis.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pypi.yaml  test.yaml
grpc_prometheus_metrics/: client_metrics.py  grpc_utils.py  prometheus_client_interceptor.py  prometheus_server_interceptor.py
grpc_prometheus_metrics/aio/: prometheus_aio_client_interceptor.py  prometheus_aio_server_interceptor.py
py_grpc_prometheus/: grpc_utils.py  prometheus_client_interceptor.py  prometheus_server_interceptor.py
py_grpc_prometheus/aio/: prometheus_aio_client_interceptor.py  prometheus_aio_server_interceptor.py
tests/: conftest.py
tests/grpc_prometheus_metrics/: test_grpc_server_handled.py  test_grpc_server_handled_latency_seconds.py  test_grpc_server_handling_seconds.py  test_grpc_server_interceptor_exception.py  test_grpc_server_msg_received.py  test_grpc_server_msg_sent.py  test_grpc_server_started.py
tests/integration/hello_world/: hello_world_async_client.py  hello_world_client.py  hello_world_pb2.py  hello_world_pb2_grpc.py  hello_world_server.py
tests/py_grpc_prometheus/: test_grpc_server_handled.py  test_grpc_server_handled_latency_seconds.py  test_grpc_server_handling_seconds.py  test_grpc_server_interceptor_exception.py  test_grpc_server_msg_received.py  test_grpc_server_msg_sent.py  test_grpc_server_started.py
